--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,6 +126,12 @@ figure {
       text-align: center;
       color: #000;
       padding-right: .3em; }
+      #colorlib-aside #colorlib-logo p {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+        display: block;
+        text-align: center;
+        color: #000;
+        padding-right: .3em; }
   #colorlib-aside #colorlib-main-menu {
     display: block;
     width: 100%; }
